# GitGenius

./: .gitignore  CMakeLists.txt  README
qml/: CommitHistoryView.qml  GitCommandDialog.qml  RepositoryHeader.qml  RepositoryTreeNode.qml  RepositoryTreeView.qml  StatusList.qml  SubmoduleList.qml  main.qml
src/: backend.h  commithistorymodel.cpp  commithistorymodel.h  gitclientbackend.cpp  gitclientbackend.h  main.cpp
